[package]
authors = ["ProphetLamb <prophet.lamb@gmail.com>"]
categories = ["command-line-utilities"]
description = "`tiny-test` is collection of functions simplifying test assertions in rust."
edition = "2021"
license = "MIT/Apache-2.0"
name = "tiny-test"
readme = "README.md"
repository = "https://github.com/ProphetLamb/tiny-test.rs"
version = "0.1.0"

[dependencies]
